[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ttf = ["sdl2-sys/ttf"]

[dependencies.sdl2]
features = ["ttf"]
version = "0.35.2"

[dependencies]
rand = "0.8"
cgmath = "0.18"
lazy_static = "1.4.0"
sdl2-sys = "0.35.2"